# firefly

./: .gitignore  Cargo.toml  README.md  deploy.sh
neardev/: dev-account  dev-account.env
res/: firefly.wasm
src/: account_info.rs  friend.rs  lib.rs  room.rs
tests/: account.rs
