[package]
name = "firefly"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
near-sdk = "4.0.0"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
tracing = "0.1"
near-sandbox-utils = "0.6.1"

[build-dependencies]
near-sandbox-utils = "0.6.1"